# cc4

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DebugInfos.json  external-config.json  gulpfile.js  package-lock.json  package.json
.claude/: settings.local.json
adapter/minigame/alipay/: engine-adapter.js  web-adapter.js
adapter/minigame/bytedance/: engine-adapter.js  web-adapter.js
adapter/minigame/taobao/: engine-adapter.js  web-adapter.js
adapter/minigame/taobao-mini-game/: engine-adapter.js  web-adapter.js
adapter/minigame/wechat/: engine-adapter.js  web-adapter.js
adapter/minigame/xiaomi/: engine-adapter.js  web-adapter.js
adapter/native/: engine-adapter.min.js  web-adapter.min.js
adapter/nodejs/: engine-adapter.js  engine-adapter.min.js  web-adapter.js  web-adapter.min.js
adapter/runtime/honor-mini-game/: engine-adapter.js
adapter/runtime/huawei-quick-game/: engine-adapter.js
adapter/runtime/oppo-mini-game/: engine-adapter.js
cmake/: predefine.cmake
cocos/: cocos-version.h
cocos/application/: BaseGame.cpp  CocosApplication.cpp
cocos/audio/: AudioEngine.cpp
cocos/audio/android/: AudioPlayerProvider.cpp
cocos/audio/apple/: AudioPlayer.mm
cocos/audio/emscripten/: AudioEngine-emscripten.cpp  AudioEngine-emscripten.h
cocos/audio/oalsoft/: AL-stub.h  AudioCache.h  AudioPlayer.h
cocos/audio/openharmony/: PcmAudioService.cpp  PcmAudioService.h  UrlAudioPlayer.cpp
cocos/base/: ThreadPool.cpp
cocos/base/std/: optional.h
cocos/bindings/event/: EventDispatcher.cpp
cocos/bindings/jswrapper/: MappingUtils.h  Object.h  SeApi.h  config.h
cocos/bindings/manual/: Box2dCallbacks.cpp  JavaScriptArkTsBridge.cpp  jsb_box2d_manual.cpp  jsb_cocos_manual.cpp  jsb_conversions_spec.cpp  jsb_conversions_spec.h  jsb_global.cpp  jsb_global_init.cpp  jsb_module_register.cpp  jsb_platform_emscripten.cpp  jsb_spine_manual.cpp
cocos/core/: ArrayBuffer.cpp  ArrayBuffer.h
cocos/core/assets/: ImageAsset.h  SimpleTexture.cpp  TextureBase.cpp  TextureBase.h
cocos/core/builtin/: DebugInfos.cpp
cocos/core/data/: Object.h
cocos/core/event/: EventTarget.h
cocos/core/scene-graph/: Node.cpp  Node.h  NodeEnum.h
cocos/core/utils/: IDGenerator.cpp
cocos/editor-support/: MiddlewareManager.cpp  MiddlewareManager.h
cocos/editor-support/dragonbones-creator-support/: CCSlot.cpp
cocos/editor-support/spine/: VERSION.txt
cocos/editor-support/spine-creator-support/: AttachmentVertices.cpp  AttachmentVertices.h  SkeletonAnimation.cpp  SkeletonAnimation.h  SkeletonCache.cpp  SkeletonCache.h  SkeletonCacheAnimation.cpp  SkeletonCacheAnimation.h  SkeletonCacheMgr.cpp  SkeletonCacheMgr.h  SkeletonDataMgr.cpp  SkeletonDataMgr.h  SkeletonRenderer.cpp  SkeletonRenderer.h  VertexEffectDelegate.cpp  VertexEffectDelegate.h  spine-cocos2dx.cpp  spine-cocos2dx.h
cocos/editor-support/spine-wasm/: AtlasAttachmentLoaderExtension.cpp  AtlasAttachmentLoaderExtension.h  CMakeLists.txt  README-zh.md  README.md  build-log.txt  build-rebuild-spine-wasm.bat  spine-skeleton-instance.cpp  spine-skeleton-instance.h  spine-wasm.cpp
cocos/engine/: Engine.cpp  EngineEvents.h
cocos/math/: MathBase.h  Vec4.cpp
cocos/network/: Downloader-emscripten.cpp  Downloader-emscripten.h  Downloader.cpp  HttpClient-emscripten.cpp  WebSocket-emscripten.cpp
cocos/platform/: BasePlatform.cpp  FileUtils.cpp  Image.cpp  SDLHelper.cpp
cocos/platform/android/: AndroidPlatform.cpp
cocos/platform/emscripten/: EmscriptenPlatform.cpp  EmscriptenPlatform.h  FileUtils-emscripten.cpp  FileUtils-emscripten.h
cocos/platform/openharmony/: FileUtils-OpenHarmony.cpp  OpenHarmonyGamepad.cpp  OpenHarmonyGamepad.h  OpenHarmonyPlatform.cpp  OpenHarmonyPlatform.h  WorkerMessageQueue.h
cocos/renderer/: GFXDeviceManager.h
cocos/renderer/gfx-base/: GFXSwapchain.cpp  SPIRVUtils.cpp
cocos/renderer/gfx-gles-common/: eglw.cpp  eglw.h  gles2w.cpp  gles2w.h  gles3w.cpp  gles3w.h
cocos/renderer/gfx-gles2/: GLES2Swapchain.cpp
cocos/renderer/gfx-gles3/: GLES3Commands.cpp  GLES3EmscriptenStubs.cpp  GLES3Swapchain.cpp  GLES3Wrangler.cpp
cocos/renderer/gfx-metal/: MTLCommandBuffer.mm  MTLUtils.mm
cocos/renderer/gfx-validator/: BufferValidator.cpp
cocos/renderer/gfx-vulkan/: VKCommandBuffer.cpp
cocos/renderer/pipeline/: Define.h  InstancedBuffer.cpp  InstancedBuffer.h  RenderInstancedQueue.cpp  RenderPipeline.h
cocos/scene/: Pass.cpp  ReflectionProbe.cpp
cocos/storage/local-storage/: LocalStorage-emscripten.cpp
cocos/ui/edit-box/: EditBox-mac.mm
extensions/assets-manager/: AssetsManagerEx.cpp  AssetsManagerEx.h  Manifest.h
templates/cmake/: wasm.cmake
templates/harmonyos-next/: oh-package.json5
templates/native/: index.ejs
templates/wasm/: CMakeLists.txt  build-cfg.json  main.cpp  shell.html.ejs
tests/window-test/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
tools/: ccc-decrypt.js
tools/gles-wrangler-generator/: package-lock.json  package.json
tools/license-upgrader/: generate.js
tools/native-pack-tool/: package-lock.json  package.json  tsconfig.json
tools/native-pack-tool/scripts/: task.js
tools/simulator/: WebAssembly-Migration-Summary.md  main.js  project.json
tools/simulator/frameworks/runtime-src/: CMakeLists-wasm.txt  CMakeLists.txt  README-WebAssembly.md  WASM-BUILD-FIXES.md  build-log.txt  build-mac.sh  build-wasm.bat  build-wasm.sh  test-wasm-config.sh  test-wasm-paths.sh
tools/simulator/frameworks/runtime-src/Classes/: Game.cpp
tools/simulator/frameworks/runtime-src/Classes/ide-support/: CodeIDESupport.h
tools/simulator/frameworks/runtime-src/build-wasm-test/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja
tools/simulator/frameworks/runtime-src/proj.ios_mac/mac/: SimulatorApp.mm  ViewController.h  ViewController.mm
tools/simulator/frameworks/runtime-src/proj.wasm/: SimulatorApp.cpp  SimulatorApp.h  index.html  main.cpp
tools/simulator/jsb-adapter/: web-adapter.js
tools/swig-config/: 2d.i  assets.i  box2d.i  scene.i  spine_3_8.i  spine_4_2.i
tools/wasm-builder/: build-wasm.js  data-preview-editor.html  package-lock.json  package.json
(+158 files in other folders)
